Changes towards version 0.6:
- Pushbutton for connecting to netplay, in anticipation of a full 
  configuration dialog later - Michael
- Cleanup of comm.c - SvdB
- Netplay - SvdB
- Added step-by-step instructions for compilation on MSVC++ - SvdB
- All output done in binary mode, due to uio/Win32 conflicts (#912) - Michael
- Online key configuration menu actually functional now - Michael
- Tweak to Lander UI - Special Weapon is now explicitly Lander Escape, 
  just as Warp Escape is - Michael
- Default key configuration changed slightly; online display of current 
  key bindings - Michael
- Input templates can now be renamed, both online and off - Michael
- Fixed an integer-size error that was causing crashes on AMD64, from 
  Solomon Peachy (#895) - Michael
- Added some generic lib code to be used by future code. - SvdB
- Joystick support is now optional; from SvdB, Alex
- Restructed and normalized savegame and game-state reading/writing code;
  savegames are now compatible between same-endian 32- and 64-bit systems;
  savegames from prior 64-bit builds cannot be used - Alex
- (Unix build scripts) Failed mkdep doesn't result in empty .d files
  anymore. Now using the gcc 3 "-MF" and "-MT" options. - SvdB
- removed internal libmikmod, adding a dependancy on an external one - SvdB
- Added a quit button for the Super Melee main menu - Michael
- Fixed sporadic uqm.cfg loading errors in release builds - Alex
- Quit (F10) now works correctly during intro (bug #862) - Alex
- Playing failure sounds when entering text consistently (bug #884) - Alex
- 64-bit fixes in construct_response () - Michael
- Removed rotating 3d planet frame caching (cuts mem usage by 5M) - Alex
- One pixel fix in melee menu pictures. - SvdB
- Debugging function to add energy during battle. - SvdB
- Changed slaveshield throb rate to match the 3DO - SvdB
- Fixed recently introduced bug with crew count on exit to HyperSpace.
  (bug #875) - SvdB