@@ -35,6 +35,8 @@
 #include "libs/tasklib.h"
 #include "libs/log.h"
 
+#include "uqmversion.h"
+#include "options.h"
 
 // Open or close the periodically occuring QuasiSpace portal.
 // A seperate thread is always inside this function when the player
@@ -275,7 +277,10 @@ while (--ac > 0)
 	}
 	else
 	{
-		log_add (log_Fatal, "Kernel failed to load!");
+		log_add (log_Fatal, "\n  *** FATAL ERROR: Could not load basic content ***\n\nUQM requires at least the base content pack to run properly.");
+		log_add (log_Fatal, "This file is typically called uqm-%d.%d.0.uqm.  UQM was expecting it", UQM_MAJOR_VERSION, UQM_MINOR_VERSION);
+		log_add (log_Fatal, "in the %s/packages directory.", baseContentPath);
+		log_add (log_Fatal, "Either your installation did not install the content pack at all, or it\ninstalled it in a different directory.\n\nFix your installation and rerun UQM.\n\n  *******************\n");
 	}
 	FreeKernel ();
 
